Streamline docker image and introduce confd.
Use JAVA_HOME from OpenJDK base image and OpenJDK 11 by default. Migrate
opennms-etc-overlay and opennms-jetty-webapp-webinf overlay to just use opennms-overlay.
Remove the opennms-data directory and mount directly to share/rrd /share/mibs share/reports
which removes a lot of complexity with initializing directories and links. Allow to run as
non-root user.